# CameraWIn

./: .gitignore  CMakeLists.txt  CMakePresets.json  CameraWinVision_Function_Training.pptx  README.md
src/: main.cpp
